--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,9 +5,25 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+		<link href="https://fonts.cdnfonts.com/css/dongle" rel="stylesheet">
+
 		<title>Joan Pons - Fruiteria</title>
 	</head>
 	<body>
+		<!--Start of Tawk.to Script-->
+		<script type="text/javascript">
+			var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+			(function(){
+			var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+			s1.async=true;
+			s1.src='https://embed.tawk.to/6829d1886392a3190c77f5fb/1irhlkvlv';
+			s1.charset='UTF-8';
+			s1.setAttribute('crossorigin','*');
+			s0.parentNode.insertBefore(s1,s0);
+			})();
+		</script>
+		<!--End of Tawk.to Script-->
+	
 		<slot />
 	</body>
 </html>
@@ -18,6 +34,7 @@
 		margin: 0;
 		width: 100%;
 		height: 100%;
-		position: relative;
+		position: relative;                                                
 	}
+
 </style>
