--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,8 +10,7 @@
 		<title>Joan Pons - Fruiteria</title>
 	</head>
 	<body>
-		<!--Start of Tawk.to Script-->
-		<script type="text/javascript">
+		<script>
 			var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
 			(function(){
 			var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
@@ -21,8 +20,23 @@
 			s1.setAttribute('crossorigin','*');
 			s0.parentNode.insertBefore(s1,s0);
 			})();
+
+			 /* --- Smooth Scroll --- */
+			import Lenis from 'lenis'
+			import 'lenis/dist/lenis.css'
+
+			const lenis = new Lenis()
+
+			// Use requestAnimationFrame to continuously update the scroll
+			const raf = (time) => {
+				lenis.raf(time)
+				requestAnimationFrame(raf)
+				
+				lenis.start()
+			}
+
+			requestAnimationFrame(raf)
 		</script>
-		<!--End of Tawk.to Script-->
 	
 		<slot />
 	</body>
