--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,22 +6,50 @@ import NavBar from '../components/NavBar.vue';
 import QuienesSomos from '../components/QuienesSomos.vue';
 import Footer from '../components/Footer.vue';
 import Layout from '../layouts/Layout.astro';
-
+import Contacto from '../components/Contacto.vue';
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+
+const sellos = ["1", "2", "3", "4", "5"]
 ---
 
 <style lang="scss">
 	body {
 		font-family: 'Dongle', sans-serif;
 	}	
+
+	.sellos {
+		display: flex;
+		justify-content: space-around;
+		width: 100%;
+		height: 100px;
+
+		.sello {
+			z-index: 10;
+			height: 125px;
+		}
+	}
 </style>
 
 <Layout>
 	<NavBar />
 	<Portada />
-	<Separador />
+
+	<Separador>
+		<div class="sellos">
+			{sellos.map((sello) => (
+				<img src={`/src/assets/sellos/${sello}.png`} alt="" class="sello">
+			))}
+		</div>
+	</Separador>
+
 	<Stock />
+
+	<Separador/>
+
 	<QuienesSomos />
+
+	<Contacto />
+
 	<Footer />
 </Layout>
