cambio de fotos

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,7 +38,7 @@ const sellos = ["1", "2", "3", "4", "5"]
 	<Separador>
 		<div class="sellos">
 			{sellos.map((sello) => (
-				<img src={`/src/assets/sellos/${sello}.png`} alt="" class="sello">
+				<img src={`public/sellos/${sello}.png`} alt="" class="sello">
 			))}
 		</div>
 	</Separador>
